# game.libretro.snes9x-next

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/snes9x-next/: CMakeLists.txt  libretro-snes9x-next-0001_fix-cross-compile.patch  snes9x-next.txt
depends/common/snes9x2010/: CMakeLists.txt  snes9x2010.txt
game.libretro.snes9x-next/: addon.xml  addon.xml.in
game.libretro.snes9x-next/resources/: buttonmap.xml  settings.xml
game.libretro.snes9x2010/: addon.xml.in
game.libretro.snes9x2010/resources/: settings.xml
game.libretro.snes9x2010/resources/language/English/: strings.po
gameclient.snes9x-next/: addon.xml
